# AndroidScreenLive

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hezb/live/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/hezb/live/: RecorderAidlInterface.aidl  RecorderCallback.aidl
app/src/main/aidl/com/hezb/live/recorder/: RecorderConfig.aidl
app/src/main/cpp/: Android.mk  Application.mk  librtmp.c  librtmp.h  log.h
app/src/main/java/com/hezb/live/: IApplication.kt  MainActivity.kt  MyUncaughtExceptionHandler.kt  PermissionRequestActivity.kt  RecorderConfigActivity.kt  RecorderService.kt  TestFilterHelper.kt
app/src/main/java/com/hezb/live/recorder/: RecorderClient.kt  RecorderConfig.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hezb/live/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib-live/: build.gradle
lib-live/src/main/: AndroidManifest.xml
lib-live/src/main/java/com/hezb/lib/live/: LiveClient.kt  LiveClientListener.kt
lib-live/src/main/res/values/: strings.xml  themes.xml
lib-rtmp/: build.gradle
lib-rtmp/src/main/cpp/: CMakeLists.txt  librtmp.c  librtmp.h
lib-rtmp/src/main/java/com/hezb/lib/rtmp/: RtmpClient.java
lib-soundtouch/: build.gradle
lib-soundtouch/src/main/: AndroidManifest.xml
lib-soundtouch/src/main/cpp/: CMakeLists.txt  SoundTouchJNI.cpp
lib-soundtouch/src/main/cpp/include/: STTypes.h
(+65 files in other folders)
